name:                bytestring-rawfilepath
version:             0.1.0.0
synopsis:            ByteString I/O with RawFilePath instead of FilePath
description:         Please see README.md
homepage:            https://github.com/kinoru/bytestring-rawfilepath#readme
license:             BSD3
license-file:        LICENSE
author:              Kinoru
maintainer:          xkinoru@gmail.com
copyright:           2016 Kinoru
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite bytestring-rawfilepath-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring-rawfilepath
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kinoru/bytestring-rawfilepath
